c2prj1_cards/grade.txt
Grading at Tue Jan 29 19:30:07 UTC 2019
Compiling cards.c
cards.c: In function ‘ranking_to_string’:
cards.c:26:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Could not compile your card.c!

Overall Grade: FAILED
